--- a/custom.yml
+++ b/custom.yml
@@ -7,31 +7,21 @@ feeds:
 packages:
   - default-settings
   - dnsmasq-full
-  - luci-app-accesscontrol
-  - luci-theme-argon-2102
-  - luci-app-argon-config
-  - luci-app-cifsd
-  - luci-app-openclash
-  - luci-app-ddns
-  - luci-app-vssr
-  - luci-app-autoreboot
-  - luci-app-ttyd
-  - luci-app-wol
-  - luci-app-cpufreq
-  - luci-app-ramfree
-  - luci-app-usb-printer
-  - luci-app-vlmcsd
-  - luci-app-wrtbwmon
-  - luci-app-upnp
-  - luci-app-wifischedule
-  - luci-app-transmission
-  - transmission-web
-  - luci-app-diskman
-  - luci-app-hd-idle
-  - luci-app-gowebdav
-  - luci-app-uugamebooster
   - luci-app-passwall
-
+  - luci-app-unblockmusic
+  - luci-app-adbyby-plus
+  - luci-app-ddns
+  - luci-app-diskman
+  - luci-app-filetransfer
+  - luci-app-frpc
+  - luci-app-go-aliyundrive-webdav
+  - luci-app-samba
+  - luci-app-uugamebooster
+  - luci-app-usb-printer
+  - luci-app-vssr
+  - luci-app-watchcat
+  -luci-app-zerotier
+  
 diffconfig: |
   CONFIG_PACKAGE_wpad-basic=n
   CONFIG_PACKAGE_wpad=n
