--- a/.github/workflows/build-glinet.yml
+++ b/.github/workflows/build-glinet.yml
@@ -6,7 +6,7 @@ on:
       device:
         description: '选择设备'     
         required: true
-        default: 'target_wlan_ap-gl-ax1800' 
+        default: 'target_mt7981_gl-mt2500' 
         type: choice
         options:
         - target_wlan_ap-gl-ax1800
@@ -22,7 +22,7 @@ on:
 
       ui:
         description: '是否包含官方UI (目前支持IPQ60XX系列、GL-A1300和GL-MT2500)'
-        required: false
+        required: true
         type: boolean
         
 jobs:
